kubernetes/aplicacion/aplicacion.yaml
# Deployment y service del backend
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend-front
  name: backend-front
  namespace: proyect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-front
  template:
    metadata:
      labels:
        app: backend-front
    spec:
      containers:
      - image: cifgt3/grupo16-backend
        imagePullPolicy: Always
        name: backend
        ports:
        - containerPort: 8080
      - image: cifgt3/grupo16-frontend
        imagePullPolicy: Always
        name: frontend
        ports:
        - containerPort: 80
---
# servicio
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend-front
  name: backend-front
  namespace: proyect
spec:
  ports:
  - nodePort: 32522
    port: 80
    protocol: TCP
    targetPort: 80
    name: uno
  - nodePort: 32523
    port: 8080
    protocol: TCP
    targetPort: 8080
    name: dos
  selector:
    app: backend-front
  type: NodePort
