kubernetes/aplicacion/backend.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: proyect
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: jossvan/backend
        ports:
        - containerPort: 8080

---
# Service tipo ClusterIp
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: proyect
  labels:
    app: backend
spec:
  type: ClusterIP
  ports:
    - port: 8080 
      targetPort: 8080
      protocol: TCP
  selector:
    app: backend
