kubernetes/aplicacion/servicio.yaml
apiVersion: v1
kind: Service
metadata:
  name: application-service
  namespace: aplicacion
spec:
  selector:
    app: application-service
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
  type: ClusterIP
